--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ h1 {
   grid-column: span 1; }
   .navContainer ul {
     list-style: none; }
+    .navContainer ul ul {
+      padding-left: 16px; }
   .navContainer li {
     color: orange; }
 
